# my_schedule_solver

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  manage.py  pyproject.toml  setup.cfg
scheduler_solver/: your_schedule.json
scheduler_solver/Solver/: 2021-22_ls.json  admin.py  apps.py  converters.py  dbexport.pgsql  forms.py  jsontest.py  models.py  signals.py  urls.py  views.py
scheduler_solver/Solver/migrations/: 0001_initial.py  0002_demands_item_items_subject_term_alter_test_name_user_and_more.py  0003_fieldofstudy_results_student_delete_item_and_more.py  0004_alter_demands_options_alter_fieldofstudy_options_and_more.py  0005_remove_student_results_remove_student_valuation_and_more.py  0006_alter_student_field.py
scheduler_solver/Solver/scheduler/: settings.py  urls.py
scheduler_solver/Solver/solver/: SubjectTypes.py  backtracking.py  out.txt  print_schedule.py  solver.py  utils.py
scheduler_solver/Solver/templates/Solver/: base.html  generate.html  index.html
scheduler_solver/Solver/templates/Solver/details/: demands_detail.html  edit_demands.html  items.html  items_detail.html  results_template.html  student_detail.html  students.html  term_detail.html  terms.html
scheduler_solver/Solver/templates/Solver/forms/: create_field.html  create_term.html  load_demands.html  load_items.html  registration.html  valuate.html
scheduler_solver/Solver/templates/Solver/login/: login.html
scheduler_solver/Solver/templates/registration/: login.html
scheduler_solver/Solver/templatetags/: customtags.py
