[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Fak"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
Django = ">=4.0.0"
graphene-django = "^2.15.0"
django-cors-headers = "^3.10.0"
django-extensions = "^3.1.5"
jupyterlab = "^3.2.2"
pandas = "^1.3.4"
flake8 = "^4.0.1"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
urllib3 = "^1.26.9"
joypy = "^0.2.6"
stapler = "^1.0.0"
django-bootstrap5 = "^21.3"
mpld3 = "^0.5.7"
pytest-cov = "^3.0.0"
black = "^22.3.0"
psycopg2 = "^2.9.3"
django-bootstrap-v5 = "^1.0.11"
rich = "^12.4.4"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
pre-commit-hooks = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "my_module:main"
